# mcp-server-starrocks

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
src/mcp_server_starrocks/: __init__.py  __main__.py  config.py  server.py
src/mcp_server_trino.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py  test_server.py
